fix spacing on footer links

--- a/assets/src/css/footer/_.scss
+++ b/assets/src/css/footer/_.scss
@@ -36,6 +36,7 @@ body > footer {
 			display: inline-block;
 			border-right: 1px solid rgba(255,255,255,0.3);
 			padding: 0 .5em;
+			margin: 0 .5em;
 
 			&:last-child {
 				border-right: 0;
